# COMP354-Scheduling-Project

./: .gitignore  CMakeLists.txt  CPU.c  README.md  calc.cpp  calc.h  cpu.h  driver.cpp  list.c  list.h  main.cpp  schedule_fcfs.cpp  schedule_priority.cpp  schedule_priority_rr.cpp  schedule_rr.cpp  schedule_sjf.cpp  schedulers.h  task.h
inputs/: bad-input.txt
